FIX: some alignment and spacing issues

--- a/src/components/home/heroSection/styles.scss
+++ b/src/components/home/heroSection/styles.scss
@@ -41,7 +41,7 @@
 
   .description {
     color: $white;
-    max-width: 80%;
+    max-width: 100%;
   }
 
   .arrow-icon-btn {
