--- a/src/components/home/hiringBox/styles.scss
+++ b/src/components/home/hiringBox/styles.scss
@@ -102,7 +102,7 @@
   
     .description {
       color: $white;
-      max-width: 70%;
+      max-width: 90%;
     }
 
     .started-btn {
