--- a/src/components/home/insightsSection/styles.scss
+++ b/src/components/home/insightsSection/styles.scss
@@ -30,6 +30,7 @@
     font-size: 16px;
     max-width: 100%;
     margin: 10px 0 20px;
+    opacity: 0.7;
   }
 
   .theme-purple {
