--- a/src/components/home/rapidlyEvolving/styles.scss
+++ b/src/components/home/rapidlyEvolving/styles.scss
@@ -18,13 +18,7 @@
     margin-bottom: 37px;
   }
 
-  .title4 {
-    font-size: 18px;
-    font-weight: 600;
-  }
-
   .description {
-    font-size: 16px;
     max-width: 65%;
     margin-top: 10px;
   }
