--- a/src/components/home/talentWorkforce/styles.scss
+++ b/src/components/home/talentWorkforce/styles.scss
@@ -29,8 +29,8 @@
   }
 
   .description {
-    font-size: 16px;
-    max-width: 85%;
+    font-size: 18px;
+    max-width: 95%;
   }
 
   .theme-purple {
