--- a/src/components/home/unberryWorks/styles.scss
+++ b/src/components/home/unberryWorks/styles.scss
@@ -26,10 +26,9 @@
   }
   
   .title4 {
-    font-size: 18px;
     font-weight: 600;
     margin: 10px 0;
-    max-width: 80%;
+    max-width: 90%;
   }
 
   .number {
@@ -38,8 +37,8 @@
   }
 
   .description {
-    font-size: 16px;
-    max-width: 80%;
+    font-size: 18px;
+    max-width: 90%;
   }
 
   .content-box {
