--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .title1 {
-  font-size: 2.3rem;
+  font-size: 3rem;
   line-height: 1.4;
   letter-spacing: -0.29px;
 }
@@ -69,7 +69,7 @@ body {
 }
 
 .title4 {
-  font-size: 1.3rem;
+  font-size: 1.125rem;
   line-height: 1.3;
   font-weight: 600;
 }
@@ -87,7 +87,7 @@ body {
 }
 
 .description {
-  font-size: 14px;
+  font-size: 1.17rem;
   font-weight: normal;
   line-height: 1.5;
 
